Atualizando home + pq ajustes texto

--- a/index.html
+++ b/index.html
@@ -1,4 +1,24 @@
 ---
-layout: home
-author_profile: true
+layout: splash
+author_profile: false
+excerpt: "Este eBook apresenta como personalizar para toda a sua turma a versão digital do livro infantil O NOME DA GENTE."
+header: 
+  overlay_image: /assets/images/home_top.jpg
+  actions:
+  - label: "Abrir eBook"
+    url: "curso/apresentacao/"
+    class: "btn--success" 
+
+feature_row:
+- image_path: /assets/images/home/live.jpg
+  alt: "Live 2 de 2019"
+  title: "Ao vivo - 23/09/2019"
+  excerpt: 'Nesta "live" explicamos como personalizar a versão digital do livro O NOME DA GENTE com o nome de cada um dos alunos de uma turma. Ótima surpresa para o Dia das Crianças!'
+  url: "https://www.facebook.com/pagina.aprender.digital/videos/1197096133811422/"
+  target: "_blank"
+  btn_label: "Assistir a gravação"
+  btn_class: "btn--primary"
+
 ---
+
+{% include feature_row type="left" %}
