--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ feature_row:
   alt: "Live 2 de 2019"
   title: "Ao vivo - 23/09/2019"
   excerpt: 'Nesta "live" explicamos como personalizar a versão digital do livro O NOME DA GENTE com o nome de cada um dos alunos de uma turma. Ótima surpresa para o Dia das Crianças!'
-  url: "https://www.facebook.com/pagina.aprender.digital/videos/1197096133811422/"
+  url: "/Live/23_09_2019"
   target: "_blank"
   btn_label: "Assistir a gravação"
   btn_class: "btn--primary"
