--- a/index.html
+++ b/index.html
@@ -18,7 +18,34 @@ feature_row:
   target: "_blank"
   btn_label: "Assistir a gravação"
   btn_class: "btn--primary"
-
+feature_row2:
+- image_path: /assets/images/home/01 - apresentacao.png
+  alt: "Aula 01"
+  title: "Aula 01 - Apresentação"
+  excerpt: 'Aula de apresentação do curso Personalização.'
+  url: "/aula/apresentacao"
+  target: "_blank"
+  btn_label: "Aula 01 - Apresentação"
+  btn_class: "btn--primary"
+- image_path: /assets/images/home/email.png
+  alt: "Aula 02"
+  title: "Aula 02 - Criando email"
+  excerpt: 'Criação do email.'
+  url: "/aula/email"
+  target: "_blank"
+  btn_label: "Aula 02 - eMail"
+  btn_class: "btn--primary"
+- image_path: /assets/images/home/pdf.png
+  alt: "Aula 03"
+  title: "Aula 03 - Gerando PDF"
+  excerpt: 'Aula sobre a geração dos livros no formato PDF.'
+  url: "/aula/pdf"
+  target: "_blank"
+  btn_label: "Aula 03 - PDF"
+  btn_class: "btn--primary"
 ---
 
 {% include feature_row type="left" %}
+
+
+{% include feature_row id="feature_row2" %}
